--- a/css/style.css
+++ b/css/style.css
@@ -373,3 +373,81 @@ h1,h2,h3 {
 
     color: #5B5766;
 }
+
+/* -------ARTICLE__TWO--------- */
+.article__content__reverse {
+    margin-right: 7.1rem;
+}
+
+.article__text-reverse {
+    font-family: 'Nunito';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 28px;
+    /* or 156% */
+    margin-bottom: 4.7rem;
+
+    color: #716C80;
+}
+
+/* ------FEATURES-TWO--------- */
+.features__two {
+    position: relative;
+    
+}
+.features__actions {
+    width: 80rem;
+    height: 52.2rem;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.features__actions .infoblock {
+    width: 36rem;
+    height: 22.9rem;
+    margin-right: 2rem;
+}
+
+.features__actions .infoblock:nth-child(even) {
+    margin-right: 0;
+}
+
+.features__content {
+    position: absolute; 
+    left: 70%;
+    top: 20%;
+}
+
+.features__title {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 34px;
+    line-height: 46px;
+    /* or 135% */
+    margin-bottom: 3rem;
+
+
+    color: #554D89;
+}
+
+.features__text {
+    font-family: 'Nunito';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 28px;
+    /* or 156% */
+    margin-bottom: 4.7rem;
+
+    color: #716C80;
+}
+
+.features__content > button {
+    color: #fff;
+    height: 5rem;
+    background: linear-gradient(26.57deg, #6852ED 16.67%, #BA43FC 100%);
+    border-radius: 40px;
+    padding: 1.3rem 3rem;
+}
