--- a/css/style.css
+++ b/css/style.css
@@ -394,6 +394,7 @@ h1,h2,h3 {
 /* ------FEATURES-TWO--------- */
 .features__two {
     position: relative;
+    margin-bottom: 14rem;
     
 }
 .features__actions {
@@ -450,4 +451,36 @@ h1,h2,h3 {
     background: linear-gradient(26.57deg, #6852ED 16.67%, #BA43FC 100%);
     border-radius: 40px;
     padding: 1.3rem 3rem;
+}
+
+
+/* ---------SKILLS-------- */
+
+.skills {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 14rem;
+}
+
+.skills__content {
+    margin-right: 3.1rem;
+}
+
+.skills__title {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 34px;
+    line-height: 44px;
+    color: #554D89;
+    margin-bottom: 3.2rem;
+}
+
+.skills__text {
+    font-family: 'Nunito';
+    font-size: 1.85rem;
+    line-height: 1.5;
+    color: #716C80;
+
+    margin-bottom: 6.4rem;
 }
