--- a/css/style.css
+++ b/css/style.css
@@ -484,3 +484,37 @@ h1,h2,h3 {
 
     margin-bottom: 6.4rem;
 }
+
+/* --------BG__CONTACT------ */
+.bg__contact {
+    max-width: 192rem;
+    height: 17rem;
+    margin: 0 auto;
+    background: no-repeat center url("/img/Bgcontact.png");
+}
+
+.contact__content {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 6.4rem;
+}
+
+.contact__title {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 36px;
+    color: #554D89;
+}
+
+.contact__content > .btn-light {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 21px;
+    text-align: center;
+    letter-spacing: 0.4375px;
+    padding-top: 0.8rem;
+}
