--- a/css/style.css
+++ b/css/style.css
@@ -518,3 +518,111 @@ h1,h2,h3 {
     letter-spacing: 0.4375px;
     padding-top: 0.8rem;
 }
+
+
+/* ---------PRICES----------- */
+.price__section {
+    margin-top: 14rem;
+    
+}
+.price__items {
+    display: flex;
+    justify-content: space-between;
+}
+.price__infoblock {
+    padding: 57px 55px;
+    width: 360px;
+    height: 616px;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 20px #E1E4ED;
+    border-radius: 10px;
+}
+.price__infoblock > a {
+    margin-left: 2.7rem;
+}
+
+.price__head {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+}
+
+.price__head:after {
+    content: '';
+    display: block;
+    color:#554D89;
+    height: 1px;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 100%;
+}
+
+.infoblock__title {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 30px;
+    color: #554D89;
+}
+
+.price__btn {
+    width: 8.2rem;
+    height: 2.6rem;
+    padding-top: 0.7rem;
+    padding-right: 1.5rem;
+    font-weight: 700;
+    font-size: 0.8rem;
+    /* identical to box height */
+    background: rgba(225, 228, 237, 0.6);
+    border-radius: 90px;
+    color: #EF7171;
+}
+
+.price__title {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 50px;
+    line-height: 60px;
+    /* identical to box height, or 120% */
+
+
+    color: #554D89;
+}
+
+.price__span {
+    margin-top: 1rem;
+    margin-bottom: 6rem;
+    font-family: 'Nunito';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 21px;
+    color: #5B5766;
+    opacity: 0.8;
+}
+.price__list {
+    margin-bottom: 10rem;
+}
+.price__list-item {
+    margin-bottom: 1rem;
+}
+
+.price__list-item > .fa-solid {
+    margin-right: 1rem;
+}
+
+.price__list-item > .fa-check {
+    font-size: 1.8rem;
+    line-height: 1.5;
+    color: #6852ED;
+}
+.price__list-item > .fa-xmark {
+    font-size: 1.8rem;
+    line-height: 1.8rem;
+    color: #EF7171;
+    mix-blend-mode: normal;
+    opacity: 0.5;
+}
