--- a/css/style.css
+++ b/css/style.css
@@ -684,7 +684,15 @@ h1,h2,h3 {
 }
 
 /* -----FOOOOTEEEEER------ */
+
+.footer__subscribe {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+}
+
 .footer {
+    position: relative;
     display: block;
     margin: 0 auto;
     max-width: 192rem;
@@ -763,12 +771,11 @@ h1,h2,h3 {
     color: #FFFFFF;
     text-decoration: none;
 }
-/* .footer__links {
+.footer__links {
     max-width: 29.9rem;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: nowrap;
-} */
+    margin-left: 8rem;
+    margin-right: 12rem;
+}
 
 .footer__links-title {
     font-family: 'Poppins';
@@ -795,16 +802,104 @@ h1,h2,h3 {
 }
 
 .f__links-one {
-    margin-right: 3rem;
+    margin-right: 4rem;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-    flex: 60%;
+    flex: 90%;
 }
 .f__links-two {
-    flex:60%;
+    flex: 70%;
     display: flex;
     flex-direction: column;
-    flex: 50%;
 }
+
+.subscribe__title {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 30px;
+    color: #554D89;
+    margin-bottom: 3rem;
+}
+.subcribe__input {
+    border: 1px solid #6852ED;
+    border-radius: 25px;
+}
+
+.box {
+    margin-bottom: 3rem;
+}
+.container-3{
+    width: 300px;
+    vertical-align: middle;
+    white-space: nowrap;
+    position: relative;
+  }
+   
+.container-3 input#search{
+    width: 200px;
+    height: 30px;
+    background: #ffffff;
+    font-size: 10pt;
+    float: left;
+    color: #262626;
+    padding-left: 45px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 80px;
+    border: 1px solid purple;
+    color: rgb(94, 41, 102);
+    font-family: 'Nunito';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 27px;
+/* identical to box height, or 150% */
+
+
+color: #716C80;
+}
+.container-3 .icon{
+    position: absolute;
+    top: 80%;
+    left: 60%;
+    margin-left: 3.3rem;
+    margin-top: .1rem;
+    z-index: 1;
+    color: #c41fca;
+    font-size: 2.5rem;
+}
+
+.sub__text {
+    font-family: 'Nunito';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 27px;
+    /* or 150% */
+
+
+    color: #716C80;
+
+    mix-blend-mode: normal;
+    opacity: 0.8;
+}
+
+.footer__copyright {
+    position: absolute;
+    left: 40%;
+    margin-top: 8.7rem;
+    font-family: 'Nunito';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 27px;
+    /* identical to box height, or 169% */
+
+
+    color: #716C80;
+}
+
 
